--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -3,6 +3,11 @@ body {
 
 }
 
+ol {
+	margin-bottom:0;
+	margin-top:0;
+}
+
 @font-face {
   font-family: 'Circular';
   src: url('../font/circular-bold.woff'); /* IE9 Compat Modes */
@@ -40,6 +45,10 @@ nav a:visited {
 }
 
 
+.hide-me{
+	position:absolute;
+	margin-top:100px;
+}
 
 
 .responsive-image {
@@ -563,6 +572,12 @@ nav p {
 
 /* My picture */
 
+.hide-me{
+	position: initial;
+	margin-top:0;
+}
+
+
 .my-face {
 	width:350px;
 	margin-top:30px;
@@ -624,6 +639,11 @@ nav {
 	flex-direction: row;
 	justify-content: space-between;
 }
+
+nav a:nth-child(4){
+	margin-left:40px;
+}
+
 
 
 /* Navigation margin spacing */
